@@ -18,6 +18,8 @@ nx-libs (2:3.5.0.29-0x2go1) UNRELEASED; urgency=medium
     + Fix removal of unused code (that part of the code that we know of so
       far). (The debian/rules file is a Makefile and Makefiles don't understand
       shell globbing with curly braces).
+  * Drop more unused code in nx-X11/programs/Xserver/hw/. Do this in
+    roll-tarball.sh and in debian/rules alike.
 
   [ Horst Schirmeier ]
   * Update 320_nxagent_configurable-keystrokes.full.patch. Fix a typo that
